--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div class="main-container">
+      <!-- 
+        -------Header-------- 
+    -->
+
       <header class="header">
         <div class="page-title-wrapper">
           <div>
@@ -47,7 +51,35 @@
           </div>
         </div>
       </header>
-      <main></main>
+
+      <!-- 
+        ------Main Body-----
+       -->
+      <main>
+        <div class="new-book-btn-wrapper">
+          <button id="new-book-btn">Add New Book</button>
+        </div>
+        <div>
+          <form id="new-book-form">
+            <label for="title">Title</label>
+            <input type="text" id="title" />
+            <label for="author">Author:</label>
+            <input type="text" id="author" />
+            <label for="pages">Pages:</label>
+            <input type="text" id="pages" />
+            <label for="read">Read:</label>
+            <input type="checkbox" id="read" />
+            <input type="submit" value="Add Book" />
+          </form>
+        </div>
+
+        <div class="cards"></div>
+      </main>
+
+      <!-- 
+        -----Footer------
+       -->
+
       <footer></footer>
     </div>
   </body>
