--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <label for="author">Author:</label>
             <input type="text" id="author" />
             <label for="pages">Pages:</label>
-            <input type="text" id="pages" />
+            <input type="number" id="pages" />
             <label for="read">Read:</label>
             <input type="checkbox" id="read" />
             <input type="submit" value="Add Book" />
