--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <div class="main-container">
+    < class="main-container">
       <!-- 
         -------Header-------- 
     -->
@@ -59,7 +59,6 @@
         <div class="new-book-btn-wrapper">
           <button id="new-book-btn">Add New Book</button>
         </div>
-        <div>
           <form id="new-book-form">
             <label for="title">Title</label>
             <input type="text" id="title" />
@@ -71,9 +70,7 @@
             <input type="checkbox" id="read" />
             <input type="submit" value="Add Book" />
           </form>
-        </div>
-
-        <div class="cards"></div>
+        <div id="library"></div>
       </main>
 
       <!-- 
