Fix card layout, add function to remove and toggleRead buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </style>
   </head>
   <body>
-    < class="main-container">
+    <divclass="main-container">
+      
       <!-- 
         -------Header-------- 
     -->
