--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     </style>
   </head>
   <body>
-    <divclass="main-container">
-      
-      <!-- 
-        -------Header-------- 
-    -->
+    <div class="main-container">
+      <!-- -------Header--------  -->
 
       <header class="header">
         <div class="page-title-wrapper">
@@ -34,51 +31,26 @@
             </h2>
           </div>
         </div>
-        <div class="library-log">
-          <h2>Library Log</h2>
-          <div class="library-log-details">
-            <div class="total-count">
-              <h3>Total book count:</h3>
-              <span id="book_count">1</span>
-            </div>
-            <div class="total-read">
-              <h3>Read:</h3>
-              <span id="book_read_count">1</span>
-            </div>
-            <div class="not-read">
-              <h3>Not Read:</h3>
-              <span id="book_unread_count">1</span>
-            </div>
-          </div>
-        </div>
       </header>
 
-      <!-- 
-        ------Main Body-----
-       -->
+      <!-- ------Main Body----- -->
       <main>
         <div class="new-book-btn-wrapper">
           <button id="new-book-btn">Add New Book</button>
         </div>
-          <form id="new-book-form">
-            <label for="title">Title</label>
-            <input type="text" id="title" />
-            <label for="author">Author:</label>
-            <input type="text" id="author" />
-            <label for="pages">Pages:</label>
-            <input type="number" id="pages" />
-            <label for="read">Read:</label>
-            <input type="checkbox" id="read" />
-            <input type="submit" value="Add Book" />
-          </form>
+        <form id="new-book-form">
+          <label for="title">Title</label>
+          <input type="text" id="title" placeholder="Title" required />
+          <label for="author">Author:</label>
+          <input type="text" id="author" placeholder="Author" required />
+          <label for="pages">Pages:</label>
+          <input type="number" id="pages" placeholder="Pages" required />
+          <label for="read">Read:</label>
+          <input type="checkbox" id="read" />
+          <input type="submit" value="Add Book" />
+        </form>
         <div id="library"></div>
       </main>
-
-      <!-- 
-        -----Footer------
-       -->
-
-      <footer></footer>
     </div>
   </body>
 </html>
